<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.john.combinebrasil.EnterSelectiveActivity"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/toolbar_default" android:id="@+id/include"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="5sp"
            >

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@drawable/background_edit"
                android:padding="5dp"
                android:layout_marginLeft="5sp"
                android:layout_marginRight="5sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:hint="@string/search"
                android:textColorHint="@color/greyDark"
                android:textSize="15sp"
                android:drawableStart="@drawable/search"
                android:id="@+id/edit_search" />

            <ImageView
                android:id="@+id/img_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/order"
                android:layout_gravity="center"
                android:alpha="0.7"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_search_null"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:gravity="center"
                android:visibility="gone"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:src="@drawable/not_search"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/search_null"
                        android:textColor="@color/dark"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:paddingLeft="30sp"
                        android:paddingRight="30sp"
                        android:paddingBottom="15sp"
                        android:paddingTop="10sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="Dicas"
                        android:textSize="17sp"
                        android:gravity="center_horizontal"
                        android:paddingBottom="5sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/error_digit"
                        android:textSize="15sp"
                        android:paddingLeft="30sp"
                        android:paddingRight="30sp"
                        android:paddingBottom="10sp"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/dicas"
                        android:textSize="15sp"
                        android:paddingLeft="30sp"
                        android:paddingRight="30sp"
                        />

                </LinearLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/list_selectives"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:dividerHeight="0dp">
            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_order_by"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:gravity="bottom"
        android:padding="10sp"
        android:clickable="true"
        android:animateLayoutChanges="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white_corner"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:padding="2sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_by"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="18sp"
                android:padding="10sp"
                android:paddingBottom="10sp"/>
            <TextView
                android:id="@+id/text_option_order_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:background="@drawable/background_item_option_white"
                android:gravity="left"
                android:textSize="18sp"
                android:padding="10sp"/>
            <TextView
                android:id="@+id/text_option_order_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/code"
                android:textColor="@color/black"
                android:background="@drawable/background_item_option_white"
                android:gravity="left"
                android:textSize="18sp"
                android:paddingTop="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:layout_marginBottom="4sp"/>
            <TextView
                android:id="@+id/text_option_order_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/black"
                android:background="@drawable/background_item_option_white"
                android:gravity="left"
                android:textSize="18sp"
                android:paddingTop="10sp"
                android:paddingLeft="10sp"
                android:paddingRight="10sp"
                android:layout_marginBottom="4sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_blue"
            android:layout_marginTop="10sp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:padding="10sp"
            android:text="@string/cancel"/>

    </LinearLayout>

  <LinearLayout
        android:id="@+id/linear_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_transparent"
        android:orientation="vertical"
        android:visibility="gone"
        android:clickable="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"></LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"></LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.6"
                    android:orientation="horizontal">
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"/>
                    <ProgressBar
                        android:id="@+id/progress"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.2"/>

                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:text="@string/update_selective"
                    android:textStyle="bold"
                    android:textSize="16dp"
                    android:id="@+id/text_progress"
                    android:gravity="center_vertical|center_horizontal" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"></LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"></LinearLayout>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
