<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.john.combinebrasil.RegisterActivity"
    android:background="@drawable/background_register"
    android:animateLayoutChanges="true">

    <include
        layout="@layout/toolbar_default"
        android:id="@+id/include"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:layout_width="0dp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/include"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp">
        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="0dp">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/background_border"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:id="@+id/constraintLayout6"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="32dp">


                    <EditText
                        android:id="@+id/edit_user"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:textSize="14sp"
                        android:background="@drawable/background_edit_normal"
                        android:drawableLeft="@drawable/ic_user"
                        android:drawablePadding="10sp"
                        android:ems="10"
                        android:hint="@string/nome"
                        android:inputType="textPersonName"
                        android:paddingTop="10dp"
                        android:textCursorDrawable="@color/color_primary_dark"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/edit_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:textSize="14sp"
                        android:background="@drawable/background_edit_normal"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="10sp"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textPersonName"
                        android:paddingTop="10dp"
                        android:textCursorDrawable="@color/color_primary_dark"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_user" />

                    <EditText
                        android:id="@+id/edit_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_edit_normal"
                        android:drawableLeft="@drawable/ic_key"
                        android:drawablePadding="10sp"
                        android:ems="10"
                        android:hint="@string/Password"
                        android:textSize="14sp"
                        android:inputType="textPassword"
                        android:paddingTop="10dp"
                        android:textCursorDrawable="@color/color_primary_dark"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_email" />

                    <EditText
                        android:id="@+id/edit_confirm_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/background_edit_normal"
                        android:drawableLeft="@drawable/ic_key"
                        android:drawablePadding="10sp"
                        android:textSize="14sp"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:paddingTop="10dp"
                        android:textCursorDrawable="@color/color_primary_dark"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

                    <Button
                        android:id="@+id/btn_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:background="@drawable/background_button_blue"
                        android:layout_marginTop="32dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@+id/edit_confirm_password"
                        android:layout_marginRight="16dp"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginLeft="16dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        android:layout_marginBottom="16dp" />
                </android.support.constraint.ConstraintLayout>

                <Button
                    android:id="@+id/btn_register_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_facebook"
                    android:textColor="@color/white"
                    android:background="@drawable/background_button_facebook"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textAllCaps="true"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout6"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" />

            </android.support.constraint.ConstraintLayout>

        </ScrollView>
        </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/linear_progress_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey_transparent"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recording"
            android:textStyle="bold"
            android:textColor="@color/dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
